Fix CSS layout issue in team pages

--- a/sagan-client/src/css/team.css
+++ b/sagan-client/src/css/team.css
@@ -149,6 +149,10 @@
   padding-top: 100px;
 }
 
+.team-map--wrapper figure, .js-team-map--wrapper figure {
+  margin: 0;
+}
+
 .team-member--avatar {
   display: inline-block;
 }
